# Linux

cs3200/Assignment1/: Original.m  PartA.m  PartB.m  PartC.m  PartD.m  PartE.m  PartF.m  VandermondeDemo.m  barycheb2.m
cs3200/Assignment2/: DriverDer.m  Equation.m  FirstDer.m  matlab.mat
cs3200/Assignment3/: TimingTests.m  bsub.m  fsub.m  lup.m  lupDriver.m
cs3200/Assignment4/: VandermondePolyInterp.m
cs3200/Assignment5/: Assignment5.m
cs3200/Final/: Final.m
cs3505/Assignment1/: a.out  convert_time.cpp~  prime_check.cpp
cs3505/Assignment2/: a.out  test.cpp  test.cpp~  unbounded.cpp  unbounded.cpp~  unbounded.h
cs3505/Assignment3/: a.out  my_tests.cpp  my_tests.cpp~  string_set.cpp  string_set.h  string_set.h~  tester.cpp  tester.cpp~  tester1.cpp  tester2.cpp  tester2.cpp~
cs3505/Assignment4/: a.out  data1_report.txt  data1output.txt  data2_report.txt  data2output.txt  data3_output.txt  data3_report.txt  foodItem.cpp  (+14 more)
cs3505/SpreadsheetServer/: CMakeLists.txt  Makefile  Message.cpp  Message.h  README  client.cpp  client.h  handlers.cpp  handlers.h  message_handler.cpp  message_handler.h  server.cpp  server.h  session_dispatcher.cpp  session_dispatcher.h  spreadsheet_server  spreadsheet_state.cpp  spreadsheet_state.h  threading.cpp  threading.h
cs3505/SpreadsheetServer/Spreads/: Carlos
cs3505_lab1/: a.out  hello.cpp  hello.cpp~
cs3505_lab2/: a.out  example.cpp  example.cpp~
cs4150/: GetShorty.cpp  NarrowArtGallery.cpp  SpidermanWorkout.cpp
cs4480/: Client.py  README.txt  cs4480_proxy.py
cs5460 Operating Systems/: assignment1.c  programName
(+230 files in other folders)
